# primal-dual-toolbox

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  setup.py
cmake/: FindEigen3.cmake  FindGPUNUFFT.cmake  FindMatlab_ICG.cmake  FindNumPy.cmake  macros.cmake
data/: brain_trajectory.npy  knee_cartesian_reference.npy  mask_cartesian_random4.mat  mask_cartesian_random4.npy  mask_cartesian_regular4.mat  mask_cartesian_regular4.npy
docs/: doxconfig.in
matlab/: CMakeLists.txt  mexMriCartesianAdjOp.cpp  mexMriCartesianFwdOp.cpp  mexMriCartesianReconstructTgv.cpp  mexMriCartesianRemoveROOSAdjOp.cpp  mexMriCartesianRemoveROOSFwdOp.cpp  mexMriCartesianRemoveROOSReconstructTgv.cpp  mexMriRadialAdjOp.cpp  mexMriRadialFwdOp.cpp  mexMriRadialReconstructTgv.cpp
primaldualtoolbox/: __init__.py
python/: CMakeLists.txt  moduleutils.h  pyDenoising.cpp  pyMriReconstruction.cpp
src/: CMakeLists.txt  definitions.h  iurandom.h  math_helper.h  primaldualtoolbox_api.h
src/operator/: mricartesianoperator.cu  mricartesianoperator.h  mriradialoperator.cu  mriradialoperator.h  mrisamplingoperator.cu  mrisamplingoperator.h  operatorbase.h
src/optimizer/: optimizer_helper.h  tgv_kernels.cuh  tgvmrioptimizer.cu  tgvmrioptimizer.h  tgvoptimizer.cu  tgvoptimizer.h  tgvoptimizerwithop.cu  tgvoptimizerwithop.h  tvoptimizer.cu  tvoptimizer.h  tvoptimizerwithop.cu  tvoptimizerwithop.h
tests/: CMakeLists.txt  main_adjointness_test.cu  main_gpunufft_test.cu  main_random_test.cu
